# final-project-IgnacioBayon

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: param_search.ipynb  predict.ipynb  predict_difference.ipynb
report/: .gitignore  main.tex
src/: data.py  lstm.py  lstm_trainer.py
utils/: metrics.py  param_search.py  tscv.py
